5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1596_1015.log
== TEST (2019-03-23 16:28:26) 
-- CODE:
a=int(input("digite o numero"))
b=int(input("digite o numero"))
c=int(input("digite o numero"))
print(min(a,b,c)(max(a,b,c)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(min(a,b,c)(max(a,b,c)))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:30:09) 
-- CODE:
a=int(input("digite o numero"))
b=int(input("digite o numero"))
c=int(input("digite o numero"))
min=(a,b,c)
max=(a,b,c)
print(min,max)

-- OUTPUT:
(10, -2, 0) (10, -2, 0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:30:38) 
-- CODE:
a=int(input("digite o numero"))
b=int(input("digite o numero"))
c=int(input("digite o numero"))
min(a,b,c)
max(a,b,c)
print(min,max)

-- OUTPUT:
<built-in function min> <built-in function max>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:32:22) 
-- CODE:
a=int(input("digite o numero"))
b=int(input("digite o numero"))
c=int(input("digite o numero"))
total=(min(a,b,c)(max(a,b,c)))
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=(min(a,b,c)(max(a,b,c)))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:14:13) 
-- CODE:
a=int(input("digite o numero"))
b=int(input("digite o numero"))
c=int(input("digite o numero"))
maximo=max(a,b,c)
mimino=min(a,b,c)
medio=(a+b+c)-(maximo-minimo)
print(maximo)
print(minimo)
print(medio)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    medio=(a+b+c)-(maximo-minimo)
NameError: name 'minimo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:14:57) 
-- CODE:
a=int(input("digite o numero"))
b=int(input("digite o numero"))
c=int(input("digite o numero"))
maximo=max(a,b,c)
mimino=min(a,b,c)
medio=(a+b+c)-(maximo+minimo)
print(maximo)
print(minimo)
print(medio)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    medio=(a+b+c)-(maximo+minimo)
NameError: name 'minimo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:16:26) 
-- CODE:
a=int(input("digite o numero"))
b=int(input("digite o numero"))
c=int(input("digite o numero"))
maximo=max(a,b,c)
minino=min(a,b,c)
medio=(a+b+c)-(maximo+minimo)
print(maximo)
print(minimo)
print(medio)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    medio=(a+b+c)-(maximo+minimo)
NameError: name 'minimo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:16:53) 
-- CODE:
a=int(input("digite o numero"))
b=int(input("digite o numero"))
c=int(input("digite o numero"))
maximo=max(a,b,c)
minimo=min(a,b,c)
medio=(a+b+c)-(maximo+minimo)
print(maximo)
print(minimo)
print(medio)

-- OUTPUT:
10
-2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:17:04) 
-- CODE:
a=int(input("digite o numero"))
b=int(input("digite o numero"))
c=int(input("digite o numero"))
maximo=max(a,b,c)
minimo=min(a,b,c)
medio=(a+b+c)-(maximo+minimo)
print(maximo)
print(minimo)
print(medio)

-- EXECUTION TIME:
0.143067
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
-2
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:17:11) 
-- CODE:
a=int(input("digite o numero"))
b=int(input("digite o numero"))
c=int(input("digite o numero"))
maximo=max(a,b,c)
minimo=min(a,b,c)
medio=(a+b+c)-(maximo+minimo)
print(maximo)
print(minimo)
print(medio)

-- EXECUTION TIME:
0.13198
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
-2
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:17:15) 
-- CODE:
a=int(input("digite o numero"))
b=int(input("digite o numero"))
c=int(input("digite o numero"))
maximo=max(a,b,c)
minimo=min(a,b,c)
medio=(a+b+c)-(maximo+minimo)
print(maximo)
print(minimo)
print(medio)

-- OUTPUT:
10
-2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:17:28) 
-- CODE:
a=int(input("digite o numero"))
b=int(input("digite o numero"))
c=int(input("digite o numero"))
maximo=max(a,b,c)
minimo=min(a,b,c)
medio=(a+b+c)-(maximo+minimo)
print(maximo)
print(minimo)
print(medio)

-- EXECUTION TIME:
0.18847
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
-2
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:17:39) 
-- CODE:
a=int(input("digite o numero"))
b=int(input("digite o numero"))
c=int(input("digite o numero"))
maximo=max(a,b,c)
minimo=min(a,b,c)
medio=(a+b+c)-(maximo+minimo)
print(maximo)
print(minimo)
print(medio)

-- OUTPUT:
10
-2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:17:54) 
-- CODE:
a=int(input("digite o numero"))
b=int(input("digite o numero"))
c=int(input("digite o numero"))
maximo=max(a,b,c)
minimo=min(a,b,c)
medio=(a+b+c)-(maximo+minimo)
print(maximo)
print(minimo)
print(medio)

-- EXECUTION TIME:
0.178946
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
-2
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:18:54) 
-- CODE:
a=int(input("digite o numero"))
b=int(input("digite o numero"))
c=int(input("digite o numero"))
maximo=max(a,b,c)
minimo=min(a,b,c)
medio=(a+b+c)-(maximo+minimo)
print(maximo)
print(medio)
print(minimo)


-- EXECUTION TIME:
0.148016
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:19:06) 
-- CODE:
a=int(input("digite o numero"))
b=int(input("digite o numero"))
c=int(input("digite o numero"))
maximo=max(a,b,c)
minimo=min(a,b,c)
medio=(a+b+c)-(maximo+minimo)
print(maximo)
print(medio)
print(minimo)


-- EXECUTION TIME:
0.150858
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:19:19) 
-- CODE:
a=int(input("digite o numero"))
b=int(input("digite o numero"))
c=int(input("digite o numero"))
maximo=max(a,b,c)
minimo=min(a,b,c)
medio=(a+b+c)-(maximo+minimo)
print(maximo)
print(medio)
print(minimo)


-- OUTPUT:
10
0
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:19:29) 
-- CODE:
a=int(input("digite o numero"))
b=int(input("digite o numero"))
c=int(input("digite o numero"))
maximo=max(a,b,c)
minimo=min(a,b,c)
medio=(a+b+c)-(maximo+minimo)
print(maximo)
print(medio)
print(minimo)


-- EXECUTION TIME:
0.182859
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:20:34) 
-- CODE:
a=int(input("digite o numero"))
b=int(input("digite o numero"))
c=int(input("digite o numero"))
maximo=max(a,b,c)
minimo=min(a,b,c)
medio=(a+b+c)-(maximo+minimo)
print(minimo)
print(medio)
print(maximo)


-- EXECUTION TIME:
0.148957
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
